# data-derby

./: .env.example  .gitignore  GEMINI.md  docker-compose.yaml  main.py  pyproject.toml  start.sh
backend/: run_pipeline.py
backend/alembic/: env.py
backend/app/: config.py  database.py  logger.py  main.py  models.py  schemas.py
backend/notebooks/: Untitled.ipynb  player_stats_9_2024-2025_2025-04-05 11_41_21.528006.csv  player_stats_9_2024-2025_2025-04-05 18_39_30.042652.csv
backend/pipeline/: fbref_schemas.py
backend/scraper/: fbref_competition_schedule_scrape.py  fbref_league_data_scrape.py  fbref_match_scraper.py  fbref_players_data_scrape.py  fbref_scrape.py  scrape_bckup.py
backend/sql_statements/: insert_competitions.sql  insert_countries.sql  insert_seasons.sql  query_playerstats_data.sql
docs/: fbref_competiton_schedule_scrape_instructions.md  fbref_match_scaper.py  fbref_match_scraper_instructions.md  fix_team_stats_scraper.md  malformed_team_stats_structure.md  match_scraper_tasks.md  scraper_tasks.md
frontend/: components.json  globals.css  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: fetchClient.ts  main.tsx  routeTree.gen.ts  types.ts
playwright_user_data/: Local State  SingletonCookie  SingletonLock  SingletonSocket
playwright_user_data/Default/: BrowsingTopicsState  Cookies  DIPS  DIPS-shm  DIPS-wal  Favicons  History  History-journal  Network Persistent State  Preferences  Reporting and NEL  SharedStorage  SharedStorage-wal  Top Sites  (+2 more)
scraped_data/: Untitled.ipynb
scrapers/: match_scraper.py
(+2113 files in other folders)
