[project]
name = "data-derby"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.8",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.5",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
]
