[project]
name = "data-derby"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.5.0",
    "fastapi[standard]>=0.115.8",
    "ipython>=9.0.2",
    "jupyterlab>=4.4.0",
    "pandas>=2.2.3",
    "patchright>=1.52.5",
    "playwright>=1.53.0",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.5",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
]
